# OOC

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  container.h  libstring.h  main.c  object.h  ooc.h  ooc_string.c
examples/: CMakeLists.txt  README.md  string_example.c
examples/Constructing_A_Default_Class/: CMakeLists.txt  README.md  constructing_a_default_class.c  default_example_struct.c  default_example_struct.h
examples/Insert_Custom_Basic_Type_Into_Vector/: CMakeLists.txt  README.md  custom_basic_type_vector_example.c  example_struct.c  example_struct.h
examples/String - Parsing Example/: README.md  string_example.c
examples/String-Parsing_Example/: CMakeLists.txt  README.md  string_example.c  string_example.cpp
examples/Vector - Shopping Adding Template Example/: README.md
examples/Vector-Shopping_Adding_Template_Example/: CMakeLists.txt  README.md  vector_example.c
src/: CMakeLists.txt  container.c  container.h  error.c  error.h  hash_map.c  hash_map.h  hash_map_template.c  hash_map_template.h  list.h  main.c  object.c  object.h  ooc.h  ooc_container.c  ooc_container.h  ooc_entry.c  ooc_entry.h  ooc_error.c  ooc_error.h  ooc_map.c  ooc_map.h  ooc_map_template.c  ooc_map_template.h  ooc_object.c  ooc_object.h  ooc_program.c  ooc_rtti.c  ooc_rtti.h  ooc_set.c  ooc_set.h  ooc_set_template.c  ooc_set_template.h  ooc_string.c  ooc_string.h  ooc_template.c  ooc_template.h  ooc_vector.c  ooc_vector.h  ooc_vector_def.h  (+6 more)
test/: CMakeLists.txt  cunit_test_driver.c  ooc_casts_cuint_test.c  ooc_casts_cuint_test.h  ooc_container_cunit_test.c  ooc_container_cunit_test.h  ooc_cunit_test.c  ooc_cunit_test.h  ooc_map_cuint_test.c  ooc_map_cuint_test.h  ooc_object_cunit_test.c  ooc_object_cunit_test.h  ooc_set_cuint_test.c  ooc_set_cuint_test.h  ooc_string_cunit_test.c  ooc_string_cunit_test.h  ooc_vector_cuint_test.c  ooc_vector_cuint_test.h  ooc_vector_cunit_test.h
